# lab-nlp

./: pyproject.toml  segment.ipynb
