[project]
name = "nlp"
version = "0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "hanlp>=2.1.3",
  "icecream>=2.1.10",
  "ipykernel>=7.2.0",
  "ipywidgets>=8.1.8",
  "jieba>=0.42.1",
  "ltp>=4.2.14",
  "ltp-core>=0.1.4",
  "ltp-extension>=0.1.13",
  "nlpir-python>=0.9.15.1",
  "pkuseg>=0.0.25",
  "pyhanlp>=0.1.89",
  "snownlp>=0.12.3",
  "thulac>=0.2.2",
  "torch>=2.10.0",
]

[tool.uv]
constraint-dependencies = [
  "jpype1==1.5.2", # pinned latest for Java 1.8
  "transformers<5", # encode_plus removed
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[tool.ruff]
indent-width = 2

[tool.basedpyright]
reportMissingImports = false
reportUnknownVariableType = false
